--- a/src/index.css
+++ b/src/index.css
@@ -58,16 +58,16 @@ p {
         margin-bottom: 2.4vw;
     }
     h1 {
-        font-size: 10.4vw;
-        line-height: 11vw;
+        font-size: 10.4vw !important;
+        line-height: 11vw !important;
     }
     h2 {
-        font-size: 6.8vw;
-        line-height: 8vw;
+        font-size: 6.8vw !important;
+        line-height: 8vw !important;
     }
     h3 {
-        font-size: 2.8vw;
-        line-height: 3vw;
+        font-size: 2.8vw !important;
+        line-height: 3vw !important;
     }
     p {
         font-family: sans-serif;
@@ -94,7 +94,7 @@ p {
     }
 }
 
-@media screen and (max-width:1019px) {
+@media screen and (max-width:1019px) and (min-width:461px) {
     .top,
     .banner,
     .mission,
@@ -102,16 +102,59 @@ p {
         margin-bottom: 4vw;
     }
     h1 {
-        font-size: 10.2vw;
-        line-height: 10.6vw;
+        font-size: 10.2vw !important;
+        line-height: 10.6vw !important;
     }
     h2 {
-        font-size: 8vw;
-        line-height: 8.4vw;
+        font-size: 8vw !important;
+        line-height: 8.4vw !important;
     }
     h3 {
-        font-size: 2.8vw;
-        line-height: 2.4vw;
+        font-size: 2.8vw !important;
+        line-height: 2.4vw !important;
+    }
+    p {
+        font-family: sans-serif;
+        font-size: 1.8vw;
+        line-height: 1.8vw;
+    }
+    .list_bstd {
+        padding-right: 4.8vw;
+    }
+    .hide {
+        display: none;
+    } 
+    .imgPreview {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 160px;
+        height: 160px;
+        background-size: cover;
+        background-repeat: no-repeat;
+        background-position: center;
+        z-index: 999;
+        pointer-events: none;
+    }
+}
+@media screen and (max-width:460px) {
+    .top,
+    .banner,
+    .mission,
+    .list {
+        margin-bottom: 4vw;
+    }
+    h1 {
+        font-size: 10vw !important;
+        line-height: 10.8vw !important;
+    }
+    h2 {
+        font-size: 8vw !important;
+        line-height: 8.4vw !important;
+    }
+    h3 {
+        font-size: 2.8vw !important;
+        line-height: 2.4vw !important;
     }
     p {
         font-family: sans-serif;
