--- a/src/index.css
+++ b/src/index.css
@@ -94,6 +94,7 @@ p {
     }
 }
 
+/* @media (461px <=width <1019px) */
 @media screen and (max-width:1019px) and (min-width:461px) {
     .top,
     .banner,
